--- a/assets/sass/sections/_hero.scss
+++ b/assets/sass/sections/_hero.scss
@@ -94,7 +94,8 @@
       }
     }
 
-    h4 {
+    h4, h1
+     {
       margin-left: 6rem;
       margin-top: 6rem;
       max-width: 62.2rem;
